--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ethersproject/units": "^5.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "ethers": "^5.6.9",
     "http": "0.0.1-security",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
