--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ethers": "^5.6.9",
     "http": "0.0.1-security",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
