--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "ethers": "^5.6.9",
     "http": "0.0.1-security",
+    "humanize-duration": "^3.27.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
