--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "ethers": "^5.6.9",
+    "html-react-parser": "^3.0.1",
     "http": "0.0.1-security",
     "humanize-duration": "^3.27.2",
     "react": "^17.0.2",
