--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
-    "web3": "^1.6.1"
+    "web3": "^1.6.1",
+    "web3-parser": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
