--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-responsive-video": "^1.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^1.1.2",
     "web3": "^1.6.1",
     "web3-parser": "^1.4.0"
