--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "axios": "^0.21.1",
     "html-react-parser": "^3.0.1",
+    
     "humanize-duration": "^3.27.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
