--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@testing-library/react": "^11.2.7",
     "axios": "^0.21.1",
     "html-react-parser": "^3.0.1",
-    
+    "https-browserify": "^1.0.0",
     "humanize-duration": "^3.27.2",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
@@ -16,6 +17,9 @@
     "react-responsive-video": "^1.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "stream": "^0.0.2",
+    "stream-http": "^3.2.0",
+    "util": "^0.12.5",
     "web-vitals": "^1.1.2",
     "web3": "^1.6.1",
     "web3-parser": "^1.4.0"
@@ -32,6 +36,10 @@
       "react-app/jest"
     ]
   },
+  "browser": {
+    "http": false,
+    "https": false
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -45,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "webpack-cli": "^5.1.4"
   }
 }
